Fix horizontal scroll on body & padding on table options

--- a/src/scss/components/_table.scss
+++ b/src/scss/components/_table.scss
@@ -18,8 +18,11 @@
       content: '';
       display: block;
       flex: 1 0 auto;
-      width: 2rem;
-      height: 100%;
+      width: $padding--mobile;
+
+      @include breakpoint('medium') {
+        width: $padding--desktop;
+      }
     }
 
     &--sticky {
@@ -281,11 +284,11 @@
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
-    padding: rem(16px) 0;
+    padding: rem(16px) $padding--mobile rem(16px) 0;
 
     @include breakpoint('large') {
       flex-wrap: nowrap;
-      padding: rem(20px) 0;
+      padding: rem(20px) $padding--desktop rem(20px) 0;
     }
 
     &--sticky {
